fixed footer alignment on smaller devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -281,12 +281,11 @@ button:hover{
     border-radius: 5px;
     transition: 0.4s;
 }
-footer{
+footer h4{
     margin-top: 30px;
     margin-bottom: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    padding-left: -20px;
+    text-align: center;
 }
 
 
